force-app/main/default/objects/Overwrite_Setup__c/Overwrite_Setup__c.object-meta.xml
<CustomObject>
    <label>Overwrite Setup</label>
    <nameField>
        <displayFormat>OW-{00000}</displayFormat>
        <label>Overwrite Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Overwrite Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>