force-app/main/default/objects/Overwrite_Setup__c/fields/Automated_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Automated_Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Automated Deployment</label>
    <referenceTo>Automated_Deployment__c</referenceTo>
    <relationshipLabel>Overwrite Setup</relationshipLabel>
    <relationshipName>Overwrite_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>