force-app/main/default/objects/Overwrite_Setup__c/fields/Business_Comments__c.field-meta.xml
<CustomField>
    <fullName>Business_Comments__c</fullName>
    <label>Business Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>