force-app/main/default/objects/Overwrite_Setup__c/fields/CSV_Type__c.field-meta.xml
<CustomField>
    <fullName>CSV_Type__c</fullName>
    <description>The type of data(Custom object ) that this csv file contains</description>
    <inlineHelpText>The type of data(Custom object ) that this csv file contains</inlineHelpText>
    <label>CSV Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>