force-app/main/default/objects/Overwrite_Setup__c/fields/Download__c.field-meta.xml
<CustomField>
    <fullName>Download__c</fullName>
    <formula>HYPERLINK(&quot;/apex/downloadcsvforoverwrite?Id=&quot;+ Id ,&quot;Generate&quot; ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate</label>
    <type>Text</type>
</CustomField>