force-app/main/default/objects/Overwrite_Setup__c/fields/Overwrite_Type__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Type__c</fullName>
    <label>Overwrite Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price List Item</fullName>
            </value>
            <value>
                <fullName>Price Tiers</fullName>
            </value>
            <value>
                <fullName>Industry Adjustors</fullName>
            </value>
            <value>
                <fullName>ListPrice@1</fullName>
            </value>
            <value>
                <fullName>Price Matrix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>