force-app/main/default/objects/Overwrite_Setup__c/fields/Overwrite_Type_API__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Type_API__c</fullName>
    <label>Overwrite Type API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>