force-app/main/default/objects/Overwrite_Setup__c/fields/RollBackIds__c.field-meta.xml
<CustomField>
    <fullName>RollBackIds__c</fullName>
    <label>Roll Back Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>