force-app/main/default/objects/Overwrite_Setup__c/fields/Setup_Data_Features__c.field-meta.xml
<CustomField>
    <fullName>Setup_Data_Features__c</fullName>
    <label>Setup Data Features</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>