force-app/main/default/objects/Overwrite_Setup__c/fields/Setup_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Setup_Data_Type__c</fullName>
    <description>This file associated with this record contains either Pricing or Dynamic Pricing Data in CSV format</description>
    <inlineHelpText>This file associated with this record contains either Pricing or Dynamic Pricing Data in CSV format</inlineHelpText>
    <label>Setup Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Dynamic Pricing</fullName>
            </value>
            <value>
                <fullName>Product Qualification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>