force-app/main/default/objects/Overwrite_Setup__c/fields/Upload__c.field-meta.xml
<CustomField>
    <fullName>Upload__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Overwrite_Setup__c/&apos;+ Id+ &apos;/view&apos;, &apos;Upload/Download&apos; ,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upload/Download</label>
    <type>Text</type>
</CustomField>